# ome-zarrpari

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  tox.ini  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: publish.yml  test.yml  test_and_deploy.yml
docs/: index.md
src/ome_zarrpari/: __init__.py  _widget.py  napari.yaml
tests/: test_widget.py
tests/cassettes/test_widget/: test_example_q_widget.yaml  test_load_v05_labels.yaml
